Translation module fixed. Added all the translations for Cyrillic and English

--- a/src/assets/i18n/sr-cyr.json
+++ b/src/assets/i18n/sr-cyr.json
@@ -5,9 +5,60 @@
     "MEDIJI": "Медији",
     "FAQ": "Често постављена питања",
     "KONTAKT": "Контакт",
-    "DONACIJE": "Донације",
+    "DONATIONS": "Донације",
     "typewriter": {
         "text1": "Захтеви нису испуњени",
         "text2": "Технички факултети у блокади"
-    }
+    },
+    "zahtev1": {
+        "naslov": "1. Објава целе документације која се тиче реконструисања железничке станице у Новом Саду која је тренутно недоступна јавности",
+        "sadrzaj": "Студенти су захтевали да се објави комплетна документација у вези са реконструкцијом Железничке станице у Новом Саду. Првобитни одговор на овако постављен захтев био је да документацијом располаже само Тужилаштво, да би убрзо након тога она била непотпуно објављена од стране других државних органа. Наше колеге са техничких факултета, као и са Удружења архитеката Србије, уочиле су да у објављеним документима недостаје кључна документација неопходна за утврђивање кривичне одговорности лица која су руководила реконструкцијом Железничке станице и била на њој ангажована. Конкретно недостају уговори који показују ко је шта радио на Железничкој станици и колико је то коштало, зашто је цена реконструкције скочила пет пута, као и ко је одговоран што је Железничка станица два пута свечано отварана без употребне дозволе."
+    },
+    "zahtev2": {
+        "naslov": "2. Захтевамо потврду надлежних органа о идентитету свих лица за која постоји основана сумња да су физички напала студенте и професоре, као и покретање кривичних поступака против њих. Такође захтевамо разрешење поменутих лица уколико се покаже да су иста јавни функционери.",
+        "sadrzaj": " Због неажурности МУП-а у погледу наведеног захтева, редовни професор и декан Факултета драмских уметности (ФДУ) је 2.12.2024. у име факултета поднео кривичну пријаву Трећем основном јавном тужилаштву. Поднета кривична пријава се односи на лица за која постоји основана сумња да су дана 22.11.2024. физички насрнула на студенте и професоре поменутог факултета, те да су извршила кривично дело Насилничко понашање као и Насилничко понашање на јавном скупу или спортској приредби <br> Наведена лица, која је идентификовало Више јавно тужилаштво у Београду, су: Милија Колџић, Александар Јокић, Душан Костић, Милена Алексић, Иван Станишић"
+    },
+    "zahtev3": {
+        "naslov": "3. Одбацивање кривичних пријава против ухапшених и приведених студената на протестима, као и обуставу већ покренутих кривичних поступака.",
+        "sadrzaj": " У претходном периоду представници власти су констатовали да су сви учесници грађанских протеста пуштени на слободу. Међутим, то се не сматра испуњењем захтева. Разлог који стоји иза тога јесте тај што пуштање на слободу из притвора не гарантује да та лица неће бити кривично гоњена, нити да против њих неће бити донета осуђујућа пресуда. У складу с изнетим, захтевамо да се против свих студената и професора учесника грађанских протеста одбаце кривичне пријаве, а уколико је кривични поступак у току, да се исти обустави."
+    },
+    "zahtev4": {
+        "naslov": "4. Повећање буџета за високо образовање у износу од 20%",
+        "sadrzaj": "Издвајања за високо образовање предвиђена Законом о буџету Републике Србије за 2025. годину износе 84,9 милијарди динара. Студенти су са пуним правом тражили повећање у износу од 20% намењених средстава (повећање за око 16,98 милијарди динара односно 145,1 милиона евра) – које би ниво улагања у високо образовање приближило нивоу улагања земаља централне и источне Европе (1,71%, према методологији OECD).1 2 Најављено је повећање „материјалних трошкова“ за 20% - што би довело до повећања укупног буџета у износу од тек 3% (22 милиона евра). „Материјални трошкови“, дакле, означавају тек сегмент буџета за високо образовање. Овако нејасан начин представљања повећања, уз сам по себи недовољан понуђени износ, није прихватљив. Уместо захтеваног побољшања квалитета високог образовања, део јавности је доведен у заблуду да је захтев испуњен. Доступност, приступачност и квалитет високог образовања су стандард прогресивног друштва и његово финансирање не сме бити упитно. Држава је дужна да обезбеди услове у којима је високо образовање избор који је доступан свима, уз квалитет који је конкурентан на светским ранг листама универзитета. Субвенционисањем ЕСПБ бодова од стране државе, значајно би се олакшали услови студирања на свим нивоима студија, те омогућила већа партиципација финансијски угрожених категорија друштва у високом образовању. Стога, ​​предлажемо да субвенционисање буде извршено преко школарина, а на нивоу појединачног ЕСПБ бода тако да износи 50% цене од оне коју би иначе платили студенти. Ограничени капацитети факултета за бављење научно-истраживачким радом спутaвају друштво у погледу технолошких и економских потенцијала, док недовољно финансирање истраживања последично доводи до девалуације стручног кадра и подстиче његово исељавање из земље. Захтевамо повећање средстава за техничко и инфраструктурно одржавање факултета, како би се створили квалитетнији услови научно-истраживачког рада у земљи."
+    },
+    "SCHOOLS": {
+        "ETF": "Електротехнички факултет",
+        "GRAĐEVINSKI": "Грађевински факултет",
+        "ARHITEKTONSKI": "Архитектонски факултет",
+        "TMF": "Технолошко-металуршки факултет",
+        "MAŠINSKI": "Машински факултет"
+    },
+    "STATUS": {
+        "FULFILLED": "Испуњен",
+        "NOT_FULFILLED": "Није испуњен"
+    },
+    "PROGRESS": "Тренутно у изради",
+    "faq": {
+        "question1": "Шта је пленум?",
+        "answer1": "Студентски пленуми су директно демократско-борбене структуре. Као отворени форуми, где сваки студент има право да дискутује и гласа о питањима стратегије и тактике студентске социјалне борбе. Одлуке пленума су јавне, подложне критикама и изменама од стране учесника пленума. То пленум чини неупоредиво отпорнијим на тајне маневре и малверзације иза затворених врата.",
+        "question2": "Реплика",
+        "answer2": "Реплика је право говора које следи након излагања говорника, а које се односи на излагање говорника.",
+        "question3": "Питање",
+        "answer3": "Питање је право говора које следи након излагања говорника, а које се односи на излагање говорника.",
+        "question4": "Нова реч",
+        "answer4": "Нова реч је право говора које следи након излагања говорника, а које се односи на излагање говорника.",
+        "question5": "Техничка реплика",
+        "answer5": "Техничка реплика је право говора које следи након излагања говорника, а које се односи на излагање говорника.",
+        "question6": "Како могу да помогнем?",
+        "answer6": "Донацијама (линк) и излажењем на протесте.",
+        "question7": "Ко може да учествује у пленуму?",
+        "answer7": "Сви студенти и студенткиње.",
+        "question8": "Како се донације користе?",
+        "answer8": "Донације се користе за покривање трошкова протеста, штампање летака, организацију перформанса и других догађаја.",
+        "question9": "Шта су радне групе?",
+        "answer9": "Радне групе су групе студената и студенткиња које се баве одређеним темама и задацима. Радне групе су отворене за све заинтересоване студенте и студенткиње.",
+        "question10": "Како могу да се укључим у радне групе?",
+        "answer10": "Можеш да се укључиш у радне групе тако што ћеш посетити неки од пленума и изразити своју жељу да се укључиш у радну групу која те занима."
+    },
+    "COMMON_QUESTIONS": "Честа питања"
 }
