Add translation for Donations title in navigation bar

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -5,6 +5,7 @@
     "MEDIJI": "Media",
     "FAQ": "FAQ",
     "KONTAKT": "Contact",
+    "DONATIONS_TITLE" : "Donations",
     "DONATIONS": {
         "BUTTON_TOOLTIP": "Visit blokadnedonacije.rs",
         "BUTTON_TEXT": "Donate"
