--- a/src/assets/i18n/sr-lat.json
+++ b/src/assets/i18n/sr-lat.json
@@ -5,6 +5,7 @@
     "MEDIJI": "Mediji",
     "FAQ": "FAQ",
     "KONTAKT": "Kontakt",
+    "DONATIONS_TITLE" : "Donacije",
     "DONATIONS": {
         "BUTTON_TOOLTIP": "Poseti blokadnedonacije.rs",
         "BUTTON_TEXT": "Doniraj"
