--- a/src/assets/i18n/sr-lat.json
+++ b/src/assets/i18n/sr-lat.json
@@ -8,7 +8,8 @@
     "DONATIONS_TITLE" : "Donacije",
     "DONATIONS": {
         "BUTTON_TOOLTIP": "Poseti blokadnedonacije.rs",
-        "BUTTON_TEXT": "Doniraj"
+        "BUTTON_TEXT": "Doniraj",
+        "NEEDED": "Potrebno"
       },
     "typewriter": {
         "text1": "Zahtevi nisu ispunjeni",
