Update translations for technical rebuttal in English and Serbian language files

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -53,7 +53,7 @@
         "question4": "New speech",
         "answer4": "New speech is the right to speak following a speaker's presentation, referring to their statement.",
         "question5": "Technical rebuttal",
-        "answer5": "A technical rebuttal is the right to speak following a speaker's presentation, referring to their statement.",
+        "answer5": "A short answer in the form of factual information or an explanation without adding personal opinion.",
         "question6": "How can I help?",
         "answer6": "Through donations (link) and attending protests.",
         "question7": "Who can participate in the plenum?",
