--- a/src/assets/i18n/sr-cyr.json
+++ b/src/assets/i18n/sr-cyr.json
@@ -53,7 +53,7 @@
         "question4": "Нова реч",
         "answer4": "Нова реч је право говора које следи након излагања говорника, а које се односи на излагање говорника.",
         "question5": "Техничка реплика",
-        "answer5": "Техничка реплика је право говора које следи након излагања говорника, а које се односи на излагање говорника.",
+        "answer5": "Кратак одговор у виду чињеничне информације или објашњења без додавања личног мишљења.",
         "question6": "Како могу да помогнем?",
         "answer6": "Донацијама (линк) и излажењем на протесте.",
         "question7": "Ко може да учествује у пленуму?",
