--- a/src/assets/i18n/sr-lat.json
+++ b/src/assets/i18n/sr-lat.json
@@ -53,7 +53,7 @@
         "question4": "Nova reč",
         "answer4": "Nova reč je pravo govora koje sledi nakon izlaganja govornika, a koje se odnosi na izlaganje govornika.",
         "question5": "Tehnička replika",
-        "answer5": "Tehnička replika je pravo govora koje sledi nakon izlaganja govornika, a koje se odnosi na izlaganje govornika.",
+        "answer5": "Kratak odgovor u vidu činjenične informacije ili objašnjenja bez dodavanja ličnog mišljenja.",
         "question6": "Kako mogu da pomognem?",
         "answer6": "Donacijama (link) i izlaženjem na proteste.",
         "question7": "Ko može da učestvuje u plenumu?",
