Update content formatting for demands in English and Serbian language files

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -25,7 +25,7 @@
 },
     "zahtev3": {
         "naslov": "3. The dismissal of criminal charges against the arrested and detained students at the protests, as well as the suspension of any ongoing criminal proceedings.",
-        "sadrzaj": "In the previous period, government representatives stated that all participants in the civil protests had been released. However, this is not considered fulfillment of the demand. <u>The reason behind this is that release from detention does not guarantee that these individuals will not be criminally prosecuted or that a conviction will not be rendered against them. In line with this, we demand that criminal charges against all students and professors who participated in civil protests be dismissed, and if criminal proceedings are ongoing, they should be suspended.</u>"
+        "sadrzaj": "In the previous period, government representatives stated that all participants in the civil protests had been released. However, this is not considered fulfillment of the demand.<br></br> <u>The reason behind this is that release from detention does not guarantee that these individuals will not be criminally prosecuted or that a conviction will not be rendered against them. In line with this, we demand that criminal charges against all students and professors who participated in civil protests be dismissed, and if criminal proceedings are ongoing, they should be suspended.</u>"
     },
     "zahtev4": {
         "naslov": "4. Increase in the higher education budget by 20% ",
