--- a/src/assets/i18n/sr-cyr.json
+++ b/src/assets/i18n/sr-cyr.json
@@ -25,7 +25,7 @@
 ,
     "zahtev3": {
         "naslov": "3. Одбацивање кривичних пријава против ухапшених и приведених студената на протестима, као и обуставу већ покренутих кривичних поступака.",
-        "sadrzaj": " У претходном периоду представници власти су констатовали да су сви учесници грађанских протеста пуштени на слободу. Међутим, то се не сматра испуњењем захтева. <u>Разлог који стоји иза тога јесте тај што пуштање на слободу из притвора не гарантује да та лица неће бити кривично гоњена, нити да против њих неће бити донета осуђујућа пресуда. У складу с изнетим, захтевамо да се против свих студената и професора учесника грађанских протеста одбаце кривичне пријаве, а уколико је кривични поступак у току, да се исти обустави.</u>"
+        "sadrzaj": " У претходном периоду представници власти су констатовали да су сви учесници грађанских протеста пуштени на слободу. Међутим, то се не сматра испуњењем захтева. <br></br><u>Разлог који стоји иза тога јесте тај што пуштање на слободу из притвора не гарантује да та лица неће бити кривично гоњена, нити да против њих неће бити донета осуђујућа пресуда. У складу с изнетим, захтевамо да се против свих студената и професора учесника грађанских протеста одбаце кривичне пријаве, а уколико је кривични поступак у току, да се исти обустави.</u>"
     },
     "zahtev4": {
         "naslov": "4. Повећање буџета за високо образовање у износу од 20%",
