--- a/src/assets/i18n/sr-lat.json
+++ b/src/assets/i18n/sr-lat.json
@@ -25,7 +25,7 @@
         },
     "zahtev3": {
         "naslov": "3. Odbacivanje krivičnih prijava protiv uhapšenih i privedenih studenata na protestima, kao i obustavu već pokrenutih krivičnih postupaka.",
-        "sadrzaj": " U prethodnom periodu predstavnici vlasti su konstatovali da su svi učesnici građanskih protesta pušteni na slobodu. Međutim, to se ne smatra uspunjenjem zahteva. <u>Razlog koji stoji iza toga jeste taj što puštanje na slobodu iz pritvora ne garantuje da ta lica neće biti krivično gonjena, niti da protiv njih neće biti doneta osuđujuća presuda. U skladu s iznetim, zahtevamo da se protiv svih studenata i profesora učesnika građanskih protesta odbace krivične prijave, a ukoliko je krivični postupak u toku, da se isti obustavi.</u>"
+        "sadrzaj": " U prethodnom periodu predstavnici vlasti su konstatovali da su svi učesnici građanskih protesta pušteni na slobodu. Međutim, to se ne smatra uspunjenjem zahteva. <br></br><u>Razlog koji stoji iza toga jeste taj što puštanje na slobodu iz pritvora ne garantuje da ta lica neće biti krivično gonjena, niti da protiv njih neće biti doneta osuđujuća presuda. U skladu s iznetim, zahtevamo da se protiv svih studenata i profesora učesnika građanskih protesta odbace krivične prijave, a ukoliko je krivični postupak u toku, da se isti obustavi.</u>"
     },
     "zahtev4": {
         "naslov": "4. Povećanje budžeta za visoko obrazovanje u iznosu od 20%",
